Added dependency on googletest. Created unit tests. Slighly refactored code.

--- a/lab1/Lab1/Lab1/Lab1.vcxproj.filters
+++ b/lab1/Lab1/Lab1/Lab1.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="FuncsLib.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="UnitTesting.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h">
