--- a/lab1/Lab1/Lab1/Lab1.vcxproj
+++ b/lab1/Lab1/Lab1/Lab1.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="FuncsLib.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="UnitTesting.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h" />
