--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# CLion files and executables
+**/cmake-build-debug
+**/*.exe
+**/.idea
+
 # User-specific files
 *.rsuser
 *.suo
