--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -2,4 +2,12 @@ cmake_minimum_required(VERSION 3.5)
 
 project(lab1)
 
-add_executable(lab1 main.c helpFunctions.c)
+set(SOURCE_LIB myLib.c)
+
+set(SOURCE_EXE main.c)	
+
+add_library(lib STATIC ${SOURCE_LIB})
+
+add_executable(main ${SOURCE_EXE})
+
+target_link_libraries(main lib)	
