--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -1,8 +1,36 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.23)
 
 project(lab1)
 
-set(SOURCE_EXE main.c)	
+# GoogleTest requires at least C++14
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(main ${SOURCE_EXE})
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
 
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+#set(SOURCE_EXE main.c)	
+enable_testing()
+
+add_executable(
+  tests
+  tests.cpp
+  util.c
+  util.h
+)
+target_link_libraries(
+  tests
+  GTest::gtest_main
+)
+
+include(GoogleTest)
+gtest_discover_tests(tests)
+
+#add_executable(main ${SOURCE_EXE} )
