--- a/lab1/.gitignore
+++ b/lab1/.gitignore
@@ -70,4 +70,19 @@ dkms.conf
 # Ignore all local history of files
 .history
 .ionide
+### CMake ###
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
 
+### CMake Patch ###
+# External projects
+*-prefix/
