--- a/lab1/Lab1/.gitignore
+++ b/lab1/Lab1/.gitignore
@@ -2,4 +2,7 @@
 **/Release
 **/.vs
 **/*vcxproj.user
-**/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.1.7
+**/*vcxproj.filters
+**/*vcxproj
+pch.h
+pch.cpp
