--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -1,13 +1,32 @@
-cmake_minimum_required(VERSION 2.8)	 
+cmake_minimum_required(VERSION 3.23)
 
 project(lab1)
 
-set(SOURCE_EXE main.c)
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(SOURCE_LIB funcs.c)
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
+)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
 
-add_library(funcs STATIC ${SOURCE_LIB})	
+enable_testing()
 
-add_executable(main ${SOURCE_EXE})	
 
-target_link_libraries(main funcs)
+add_executable(
+  test_funcs
+  test_funcs.cpp
+  funcs.c
+  funcs.h
+  
+)	
+
+target_link_libraries(
+    test_funcs 
+    GTest::gtest_main
+)
+include(GoogleTest)
+gtest_discover_tests(test_funcs)
